--- a/style.css
+++ b/style.css
@@ -1,11 +1,456 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Arial;
 }
 nav{
     display: flex;
     justify-content: space-between;
     color: white;
-    background-color: rgb(8, 12, 30);
+   
+}
+.logoSection{
+   margin-right: 100px;
+}
+#info1{
+    margin-top: 15px;
+    font-size: 25px;
 
 }
+#info2{
+    margin-top: 15px;
+    font-size: 25px;
+}
+#info3{
+    font-size: 25px;
+
+}
+#info4{    
+    font-size: 25px;
+
+}
+#info5{
+    margin-top: 15px;
+    font-size: 25px;
+    color: aqua;
+
+}
+.navbar{
+    display: flex;
+    margin-top: 30px;
+    font-size: 20px;
+    width: 40vw;
+   justify-content: space-evenly;
+}
+.navbar li{
+    list-style: none;
+}
+.navbar li a{
+    text-decoration: none;
+    color: white;
+}
+.navbar li a:hover{
+    opacity: 0.6;
+}
+#home-img{
+    height: 110vh;
+    width: 1519px;
+}
+
+.firstSection{
+ background-image: url(Legend-Homes-Reed-Brown-pic.jpg);
+ height: 900px;
+ width: 1519px;
+ background-repeat: no-repeat;
+ background-size: 1519px 900px ;
+}
+.firstSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 800;
+    font-size: 40px;
+}
+.sectionSection-heading{
+    font-size: 50px;
+    margin-top: 50px;
+    margin-left: 180px;
+}
+.sectionSection-content{
+    display: flex;
+    justify-content: space-evenly;
+}
+.box1{
+    max-width: 40vw;
+    margin: auto;
+font-size: 20px;
+margin-top: -10px;
+}
+.small-Seperation{
+    height: 3px;
+    width: 150px;
+    background-color: gray;
+    margin-left: 200px;
+    margin-top: 50px;
+}
+.thirdSection{
+    display: flex;
+    justify-content: space-evenly;
+    height: 100vh;
+    margin-top: 50px;
+}
+.seperation{
+    height: 2px;
+    width: 80vw;
+    margin: auto;
+    background-color: rgb(154, 153, 153);
+    margin-top: 100px;
+
+}
+#small-house img{
+    height: 90vh;
+    width: 40vw;
+}
+#big-house img{
+    height: 90vh;
+    width: 58vw;
+}
+.box3{
+    background-color: rgb(45, 30, 30);
+    color: white;
+    height: 532px;
+}
+.box3 h3{
+font-size: 30px;
+color: white;
+margin-top: 200px;
+}
+.box3 p{
+font-size: 25px;
+margin-left:30px;
+margin-top: 20px;
+ 
+
+}
+.fourthSection{
+    display: flex;
+    height: 500px;
+margin-top: -60px;
+}
+
+.box4{
+font-size: 25px;
+background-color:rgba(175, 175, 12, 0.804) ;
+color: white;
+width: 180px;
+height: 50px;
+margin-left: 250px;
+margin-top: 50px;
+display: flex;
+justify-content: center;
+align-items: center;
+cursor: pointer;
+}
+.box4 a{
+    text-decoration: none;
+  color: white;
+}
+.border1:hover{
+background-color:rgb(45, 30, 30);
+border: 3px solid  rgba(175, 175, 12, 0.804) ;
+color: white;
+}
+.box6{
+    width: 400px;
+
+}
+.box6 h1{
+    font-size: 35px;
+}
+.box6 h4{
+    margin-top: 15px;
+    font-weight: bolder;
+    font-size: 20px;
+  
+}
+.box6 p{
+    margin-top: 20px;
+    
+}
+.box7 img{
+    height: 500px;
+    margin-left: 50px;
+
+}
+.fifthSection{
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(231, 223, 223);
+    margin-top: 35px;
+   
+}
+.box{
+    height: 100px;
+    width: 10px;
+    background-color: rgba(175, 175, 12, 0.804);
+    margin-left: 200px;
+    margin-top: 45px;
+    margin-right: 30px;
+}
+
+.panel{
+    height: 400px;
+    border-bottom: 2px solid grey;
+}
+.container2{
+height: 150px;
+display: flex;
+
+}
+
+.box8{
+    margin-top:70px ;
+    font-size: 50px;
+}
+.container3{
+    display: flex;
+    height: 300px;
+    justify-content: space-evenly;
+}
+.box9 i{
+    font-size: 35px;
+}
+.box9 pre  h4{
+    margin-left: 15px;
+    margin-top: -15px;
+}
+.box9  p{
+    margin-top: -9px;
+    margin-left: -32px;
+}
+.box10 i{
+    font-size: 35px;
+}
+.box10 h4{
+    margin-top:-15px ;
+    margin-left: -13px;
+}
+.box10 p{
+    margin-top: -8px;
+    margin-left: -75px;
+
+}
+.container4{
+    height: 600px;
+    background-color: rgb(104, 95, 95);
+    background-image: url(Screenshot\ \(11\).png);
+    background-repeat: no-repeat;
+    margin-top: 20px;
+}
+.box11{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    font-size: 45px;
+    color: white;
+    margin-top: 40px;
+    height: 200px;
+}
+.box11 p{
+    margin-left: -480px;
+}
+.box11 h5{
+    margin-right: -470px;
+}
+.container4a{
+    display: flex;
+    justify-content: space-evenly;
+height: 300px;
+color: white;
+
+}
+.box12{
+    display: block;
+}
+.box12 p{
+    font-size: 65px;
+}
+.box12 h5{
+    font-size: 50px;
+    margin-left: -194px;
+    margin-top: 13px;
+}
+.box13{
+    display: block;
+
+}
+.box13 p{
+    font-size: 65px;
+}
+.box13 h5{
+    font-size: 50px;
+    margin-left: -50px;
+    margin-top: 13px;
+}
+.sixthSection{
+    display: flex;
+    height: 80vh;
+    justify-content: space-evenly;
+    background-color: black;
+    color: white;
+}
+.sixthSection .box14 h1{
+    font-size: 3rem;
+    color: #8892B0; 
+    margin: 20px 0;
+} 
+.email{
+    margin-bottom: 20px;
+}
+.box14{
+    font-weight: bolder;
+    margin-top: 100px;
+}
+
+.phone{
+    margin-bottom: 20px;
+}
+.mb-3{
+    display: flex;
+    width: 20vw;
+    flex-direction: column;
+   
+}
+.box15{
+    margin-top: 90px;
+}
+.form-control{
+    height: 30px;
+    margin-bottom: 20px ;
+}
+.mb-3 input,textarea{
+    border-radius: 10px;
+    font-size: 15px;
+}
+.btn{
+    width: 25%;
+    background-color: white;
+    font-size: 15px;
+    margin-top: 20px;
+    padding: 5px;
+    border-radius: 30px;
+    font-weight: 600;
+    cursor: pointer;
+
+}
+.copyright{
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  background-color: black;
+  color: white;
+}
+.icons{
+    display: flex;
+    margin-top: 20px;
+    font-size: 30px;
+    
+}
+.icons i{
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.facebook i{
+    margin-left: -10px;
+    text-decoration: none;
+    color: rgb(88, 53, 160);
+}
+.insta i{
+    text-decoration: none;
+    color: rgb(88, 53, 160);
+}
+.linkdin i{
+    text-decoration: none;
+    color: rgb(88, 53, 160);
+}
+.facebook i:hover{
+    color: rgb(57, 9, 181);
+}
+.insta i:hover{
+color: pink;
+}
+.linkdin i:hover{
+    color: rgb(7, 7, 127);
+}
+.container5{
+    display: flex;
+    justify-content: space-evenly;
+    height: 370px;
+    background-color: black;
+    color: white;
+    border-bottom: 2px solid white;
+    
+    }
+    .box16{
+        display: block;
+        width: 200px;
+        margin-top: 25px;
+    }
+    .about{
+        color: rgba(188, 188, 32, 0.729);
+    }
+    .about1{
+        margin-top: 15px;
+    }
+    .box17{
+        display: block;
+        width: 200px;
+        margin-top: 25px;
+    }
+    .add{
+        color: rgba(188, 188, 32, 0.729);
+    }
+    .add1{
+        margin-top: 15px;
+    }
+    .box18{
+        display: block;
+        width: 300px;
+        margin-top: 25px;
+        margin-left: 20px;
+    }
+    .follow{
+        color: rgba(188, 188, 32, 0.729);
+    }
+    .insta i{
+        font-size: 20px;
+        color: pink;
+        margin-top: 15px;
+    }
+    .whatsapp i{
+        font-size: 20px;
+        color: rgb(46, 219, 7);
+        
+    }
+    .whatsapp{
+        margin-top: 10px;
+    }
+    .facebook i{
+        font-size: 20px;
+        color: rgb(56, 94, 179);
+    }
+    .facebook{
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .seperation2{
+        height: 1px;
+        width: 80vw;
+        background-color: white;
+        margin: auto;
+    }
