--- a/style.css
+++ b/style.css
@@ -651,9 +651,9 @@ body {
     }
 
     .testimonial-heading h2 {
-        font-size: 3rem;
-        text-align: center;
-        margin-left: 0;
+        font-size: 2.3rem;
+        text-align: left;
+        margin-left: -20px;
     }
 }
 
