--- a/style.css
+++ b/style.css
@@ -699,6 +699,7 @@ body {
     color: white;
     margin-top: 100px;
     height: 70vh;
+    margin-bottom: 100px;
 }
 
 /* Heading Styling (Same as previous sections) */
