contact and copyright

--- a/style.css
+++ b/style.css
@@ -636,6 +636,7 @@ body {
         height: 200px;
         margin: auto;
         padding: 15px;
+        border-radius: 10px;
     }
 
     .testimonial-content {
