--- a/style.css
+++ b/style.css
@@ -341,12 +341,15 @@ body {
 
 /* About Content Before Expansion */
 .about-content {
-    max-width: 800px;
+    max-width: 1400px;
     margin: auto;
     position: relative;
     text-align: center;
     transition: transform 0.3s ease-in-out;
     padding-bottom: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
 }
 
 /* About Section Text */
@@ -354,12 +357,24 @@ body {
     font-size: 1.5rem;
     color: #ddd;
     transition: 0.3s ease-in-out;
-    line-height: 1.7;
+    line-height: 1.5;
+    text-align: justify;  /* Justifies text for equal line width */
+    text-justify: inter-word; 
+    
+}
+.about-text-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    max-width: 600px;
+    margin-right: 200px;
 }
 
 .about-content:hover .about-text {
     /* letter-spacing: 1px; */
-    color: #ffc107;
+    /* color: #ffc107; */
 }
 
 /* Additional Images Before Expansion */
@@ -368,11 +383,13 @@ body {
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
+    max-width: 900px;
+    flex-wrap: wrap;
 }
 
 .about-images img {
-    width: 150px;
-    height: auto;
+    width: 270px;
+    height: 300px;
     border-radius: 10px;
     transition: transform 0.3s ease-in-out;
 }
@@ -393,6 +410,10 @@ body {
     margin-top: 20px;
     display: inline-block;
     border-radius: 5px;
+}
+.read-more-btn{
+    margin-left: 250px;
+    margin-top: -20px;
 }
 .read-more-btn a{
     text-decoration: none;
@@ -416,7 +437,7 @@ color: black;
     width: 100%;
     max-height: 0; /* Initially hidden */
     overflow: hidden;
-    background: rgba(0, 0, 0, 0.95);
+    background-color: #011b30;
     color: white;
     transition: max-height 0.5s ease-in-out;
     padding: 0;
